# src/main/kotlin/com/example/books/web/UserController.kt
@@ -3,8 +3,7 @@ package com.example.books.web
 import com.example.books.service.Mapper
 import com.example.books.service.UserService
 import org.generated.books.api.UsersApi
-import org.generated.books.model.WebBook
-import org.generated.books.model.WebFavouriteRequest
+import org.generated.books.model.*
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.RestController
 
@@ -29,4 +28,28 @@ class UserController(val userService: UserService,
         return ResponseEntity.ok(webBooks)
     }
 
+    override fun createBookList(webBookListRequest: WebBookListRequest): ResponseEntity<Void> {
+        userService.createBookList(webBookListRequest.bookListName)
+        return ResponseEntity.ok(null)
+    }
+
+    override fun removeBookList(webBookListRequest: WebBookListRequest): ResponseEntity<Void> {
+        userService.removeBookList(webBookListRequest.bookListName)
+        return ResponseEntity.ok(null)
+    }
+
+    override fun addBookToBookList(webAddBookToBookListRequest: WebBookToBookListRequest): ResponseEntity<Void> {
+        userService.addBookToBookList(webAddBookToBookListRequest.bookListName, webAddBookToBookListRequest.bookId)
+        return ResponseEntity.ok(null)
+    }
+
+    override fun getBookLists(): ResponseEntity<List<WebBookListResponse>> {
+        val webBookLists = userService.getAllBookLists()
+        return ResponseEntity.ok(webBookLists)
+    }
+
+    override fun removeBookFromBookList(webBookToBookListRequest: WebBookToBookListRequest): ResponseEntity<Void> {
+        userService.removeBookFromBookList(webBookToBookListRequest.bookListName, webBookToBookListRequest.bookId)
+        return ResponseEntity.ok(null)
+    }
 }
